@@ -1,0 +1,16 @@
+
+! ignore .*Using Boost contexts. Welcome to the 21th century.
+! ignore .*Activating SYSV context factory
+! ignore .*Using raw contexts. Because the glibc is just not good enough for us.
+
+$ ./context-stacksize --log=simix_context.thresh:verbose --log=no_loc ${platfdir}/small_platform.xml
+> [::(0) 0.000000] [simix_context/VERBOSE] Creating a context of stack 8Mb
+> [0.000000] [simix_context/VERBOSE] Creating a context of stack 8Mb
+> [0.000000] [simix_context/VERBOSE] Creating a context of stack 16Mb
+> [0.000000] [simix_context/VERBOSE] Creating a context of stack 32Mb
+> [0.000000] [simix_context/VERBOSE] Creating a context of stack 64Mb
+> [Tremblay:actor:(1) 0.000000] [s4u_test/INFO] Hello
+> [Tremblay:actor:(2) 0.000000] [s4u_test/INFO] Hello
+> [Tremblay:actor:(3) 0.000000] [s4u_test/INFO] Hello
+> [Tremblay:actor:(4) 0.000000] [s4u_test/INFO] Hello
+> [0.000000] [s4u_test/INFO] Simulation time 0
