@@ -21,7 +21,9 @@ C interface:
  - Many MSG tests were converted to the new S4U's interface in C, that
    was extended for that.
 
-Fixed bugs (FG#.. -> framagit bugs; FG!.. -> FG merge requests; GH: GitHub):
+Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
+ (FG: issues on Framagit; GH: issues on GitHub; GF: issues on GForge)
+ - GF#18137: Allow different stack sizes?
  - FG#41: Add sg_actor_create C interface
  - FG#43: xbt::random needs some care
  - FG#48: The Impossible Did Happen (yet again)
